# lanhunch

./: LICENSE  README.md  lanhunch.cabal  lnhunch.cabal
src/: Hunch.hs
src/Hunch/: Types.hs
src/Hunch/Analyse/: NGram.hs  Naive.hs
src/Text/Hunch/: Types.hs
src/Text/Hunch/Analyse/: NGram.hs  Naive.hs
