name:                lnhunch
version:             0.1.0.0
synopsis:            language identification library
description:         Please see README.md
homepage:            https://github.com/sigrlami/lnhunch#readme
license:             MIT
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Copyright: (c) 2016 Sergey Bushnyak
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hunch
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sigrlami/lnhunch
